--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-<h1>Wordpress random plugins and snippets of code</h1>
-<p>Developed as and when required for client projects.</p>
-<p>I wouldn't suggest using these in a live enviroment without reading up on the latest wordpress security updates.</p>
+# Wordpress random plugins and snippets of code
+---
+Developed as and when required for client projects.
+I wouldn't suggest using these in a live enviroment without reading up on the latest wordpress security updates.
